<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_common_bg">

    <com.laka.androidlib.widget.titlebar.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_title_bar_height" />

    <TextView
        android:id="@+id/tv_bind_order_hint"
        style="@style/DefaultTextNotification"
        android:text="@string/bind_order_hint"
        app:layout_constraintTop_toBottomOf="@id/title_bar" />

    <EditText
        android:id="@+id/et_bind_order_input"
        style="@style/DefaultInputEditText"
        android:hint="@string/bind_order_input_hint"
        android:inputType="number"
        android:maxLength="18"
        app:layout_constraintTop_toBottomOf="@id/tv_bind_order_hint" />

    <ImageView
        android:id="@+id/iv_bind_order_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp_10"
        android:padding="@dimen/dp_10"
        android:src="@drawable/btn_delete_round"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/et_bind_order_input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_bind_order_input" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_bind_order_error_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_15"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_bind_order_input">

        <ImageView
            android:id="@+id/iv_bind_order_status"
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_2"
            android:src="@drawable/ic_notice_round"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_bind_order_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/bind_order_error_hint"
            android:textColor="@color/color_main"
            android:textSize="@dimen/sp_13"
            app:layout_constraintLeft_toRightOf="@id/iv_bind_order_status"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <com.laka.androidlib.widget.SelectorButton
        android:id="@+id/btn_bind_order"
        style="@style/DefaultMainButton"
        android:text="@string/ensure_bind"
        app:bg_radius="@dimen/dp_5"
        app:bga_color="@color/color_main"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_bind_order_error_hint"
        app:press_text_color="@color/white" />

</android.support.constraint.ConstraintLayout>